--- a/extra.mk.in
+++ b/extra.mk.in
@@ -80,6 +80,8 @@ SNDFILE_LIBS ?= @SNDFILE_LIBS@
 SNDIO_LIBS ?= @SNDIO_LIBS@
 QT_CFLAGS ?= @QT_CFLAGS@
 QT_LIBS ?= @QT_LIBS@
+QTMULTIMEDIA_CFLAGS ?= @QTMULTIMEDIA_CFLAGS@
+QTMULTIMEDIA_LIBS ?= @QTMULTIMEDIA_LIBS@
 VORBIS_CFLAGS ?= @VORBIS_CFLAGS@
 VORBIS_LIBS ?= @VORBIS_LIBS@
 WAVPACK_CFLAGS ?= @WAVPACK_CFLAGS@
