qtui: Use system icon theme on *NIX systems.

--- a/src/qtui/Makefile
+++ b/src/qtui/Makefile
@@ -18,6 +18,16 @@ include ../../extra.mk
 
 # These overrides variables in buildsys.mk and so must come after it.
 PACKAGE_NAME = audacious
+
+CUSTOM_ICONS=no
+ifeq ($(HAVE_MSWINDOWS),yes)
+CUSTOM_ICONS=yes
+endif
+ifeq ($(HAVE_DARWIN),yes)
+CUSTOM_ICONS=yes
+endif
+
+ifeq ($(CUSTOM_ICONS),yes)
 DATA = QtUi/16/audio-volume-high.png \
        QtUi/16/audio-volume-low.png \
        QtUi/16/audio-volume-medium.png \
@@ -50,6 +60,7 @@ DATA = QtUi/16/audio-volume-high.png \
        QtUi/22/media-skip-forward.png \
        QtUi/AUTHORS \
        QtUi/index.theme
+endif
 
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
