qtui: Move code out of header files.

--- a/src/qtui/Makefile
+++ b/src/qtui/Makefile
@@ -2,7 +2,7 @@ PLUGIN = qtui${PLUGIN_SUFFIX}
 
 SRCS = qtui.cc \
        main_window.cc \
-       main_window.moc \
+       main_window_actions.cc \
        playlist.cc \
        playlist.moc \
        playlist_model.cc \
