qtui: Split off status bar code into a QStatusBar subclass.

--- a/src/qtui/Makefile
+++ b/src/qtui/Makefile
@@ -12,6 +12,7 @@ SRCS = qtui.cc \
        playlist_tabs.moc \
        filter_input.cc \
        filter_input.moc \
+       status_bar.cc \
        time_slider.cc \
        ui_main_window.h
 
