cdaudio-ng: Fix a minor memory leak and remove GLib dependency.

--- a/src/cdaudio-ng/Makefile
+++ b/src/cdaudio-ng/Makefile
@@ -10,5 +10,5 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${CDIO_CFLAGS} ${CDDB_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS}  ${CDIO_LIBS} ${CDDB_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${CDIO_CFLAGS} ${CDDB_CFLAGS} -I../..
+LIBS += ${CDIO_LIBS} ${CDDB_LIBS}
