asx,asx3,cue: Remove GLib dependency.

--- a/src/cue/Makefile
+++ b/src/cue/Makefile
@@ -9,6 +9,6 @@ plugindir := ${plugindir}/${CONTAINER_PLUGIN_DIR}
 
 LD = ${CXX}
 
-CPPFLAGS += -I../.. ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${CUE_CFLAGS}
+CPPFLAGS += -I../.. ${PLUGIN_CPPFLAGS} ${CUE_CFLAGS}
 CFLAGS += ${PLUGIN_CFLAGS}
-LIBS += ${GLIB_LIBS} ${CUE_LIBS}
+LIBS += ${CUE_LIBS}
