--- a/src/asx/Makefile
+++ b/src/asx/Makefile
@@ -9,5 +9,5 @@ plugindir := ${plugindir}/${CONTAINER_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
+
