--- a/src/asx3/Makefile
+++ b/src/asx3/Makefile
@@ -10,5 +10,5 @@ plugindir := ${plugindir}/${CONTAINER_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${XML_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS} ${XML_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${XML_CFLAGS} -I../..
+LIBS += ${XML_LIBS}
