--- a/src/m3u/Makefile
+++ b/src/m3u/Makefile
@@ -10,5 +10,4 @@ plugindir := ${plugindir}/${CONTAINER_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
