Minimal update for changes in core.

--- a/src/hotkey/Makefile
+++ b/src/hotkey/Makefile
@@ -7,6 +7,7 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
+LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} -I../.. -I..
 LIBS += ${GLIB_LIBS} ${GTK_LIBS} -lX11 -laudgui
