--- a/src/blur_scope/Makefile
+++ b/src/blur_scope/Makefile
@@ -7,6 +7,7 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${VISUALIZATION_PLUGIN_DIR}
 
+LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} -I../..
 LIBS += ${GTK_LIBS} -lm
