--- a/src/cd-menu-items/Makefile
+++ b/src/cd-menu-items/Makefile
@@ -7,6 +7,7 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
+LD = ${CXX}
 CPPFLAGS += -I../.. ${GTK_CFLAGS}
 CFLAGS += ${PLUGIN_CFLAGS}
 LIBS += ${GTK_LIBS}
