--- a/src/gl-spectrum/Makefile
+++ b/src/gl-spectrum/Makefile
@@ -7,6 +7,7 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${VISUALIZATION_PLUGIN_DIR}
 
+LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../.. ${GTK_CFLAGS}
 LIBS += -lm ${GTK_LIBS} ${GL_LIBS}
