--- a/src/gnomeshortcuts/Makefile
+++ b/src/gnomeshortcuts/Makefile
@@ -7,6 +7,7 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
+LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${DBUS_CFLAGS} -I../.. -I..
 LIBS += ${GLIB_LIBS} ${DBUS_LIBS} ${GTK_LIBS}
