compressor: Migrate to new-style plugin declaration.

--- a/src/compressor/Makefile
+++ b/src/compressor/Makefile
@@ -1,6 +1,6 @@
 PLUGIN = compressor${PLUGIN_SUFFIX}
 
-SRCS = compressor.cc plugin.cc
+SRCS = compressor.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
