alsa: Port to new-style plugin declaration.

--- a/src/alsa/Makefile
+++ b/src/alsa/Makefile
@@ -1,8 +1,7 @@
 PLUGIN = alsa${PLUGIN_SUFFIX}
 
 SRCS = alsa.cc \
-       config.cc \
-       plugin.cc \
+       config.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
