sldout: Convert to C++ plugin declaration.

--- a/src/sdlout/Makefile
+++ b/src/sdlout/Makefile
@@ -1,7 +1,6 @@
 PLUGIN = sdlout${PLUGIN_SUFFIX}
 
-SRCS = sdlout.cc \
-       plugin.cc \
+SRCS = sdlout.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
@@ -10,5 +9,5 @@ plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 LD = ${CXX}
 CPPFLAGS += -I../.. ${SDL_CFLAGS}
-CXXFLAGS += ${GLIB_CFLAGS} ${PLUGIN_CFLAGS}
-LIBS += -lm ${GLIB_LIBS} ${SDL_LIBS}
+CXXFLAGS += ${PLUGIN_CFLAGS}
+LIBS += -lm ${SDL_LIBS}
