--- a/src/compressor/Makefile
+++ b/src/compressor/Makefile
@@ -9,5 +9,5 @@ plugindir := ${plugindir}/${EFFECT_PLUGIN_DIR}
 
 LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
-LIBS += -lm ${GLIB_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
+LIBS += -lm
