--- a/src/sox-resampler/Makefile
+++ b/src/sox-resampler/Makefile
@@ -9,5 +9,5 @@ plugindir := ${plugindir}/${EFFECT_PLUGIN_DIR}
 
 LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS} -lsoxr
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
+LIBS += -lsoxr
