--- a/src/mixer/Makefile
+++ b/src/mixer/Makefile
@@ -8,6 +8,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${EFFECT_PLUGIN_DIR}
 
 LD = ${CXX}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
 CFLAGS += ${PLUGIN_CFLAGS}
-LIBS += ${GLIB_LIBS}
