coreaudio: migrate to OutputPlugin class

--- a/src/coreaudio/Makefile
+++ b/src/coreaudio/Makefile
@@ -1,7 +1,6 @@
 PLUGIN = coreaudio${PLUGIN_SUFFIX}
 
-SRCS = coreaudio.cc \
-       plugin.cc \
+SRCS = coreaudio.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
