Include HAVE_{LINUX,MSWINDOWS,DARWIN} in extra.mk.in Fixes custom icons installation under OS X for Qt UI plugin

--- a/extra.mk.in
+++ b/extra.mk.in
@@ -92,3 +92,7 @@ XML_CFLAGS ?= @XML_CFLAGS@
 XML_LIBS ?= @XML_LIBS@
 XRENDER_CFLAGS ?= @XRENDER_CFLAGS@
 XRENDER_LIBS ?= @XRENDER_LIBS@
+
+HAVE_LINUX ?= @HAVE_LINUX@
+HAVE_MSWINDOWS ?= @HAVE_MSWINDOWS@
+HAVE_DARWIN ?= @HAVE_DARWIN@
