gl-spectrum-qt: qt port of gl spectrum analyzer

--- a/extra.mk.in
+++ b/extra.mk.in
@@ -82,6 +82,8 @@ QT_CFLAGS ?= @QT_CFLAGS@
 QT_LIBS ?= @QT_LIBS@
 QTMULTIMEDIA_CFLAGS ?= @QTMULTIMEDIA_CFLAGS@
 QTMULTIMEDIA_LIBS ?= @QTMULTIMEDIA_LIBS@
+QTOPENGL_CFLAGS ?= @QTOPENGL_CFLAGS@
+QTOPENGL_LIBS ?= @QTOPENGL_LIBS@
 VORBIS_CFLAGS ?= @VORBIS_CFLAGS@
 VORBIS_LIBS ?= @VORBIS_LIBS@
 WAVPACK_CFLAGS ?= @WAVPACK_CFLAGS@
