--- a/configure.ac
+++ b/configure.ac
@@ -519,15 +519,9 @@ if test "x$enable_jack" != "xno"; then
     )
 
     if test "x$have_jack" = "xyes"; then
-        PKG_CHECK_MODULES([SAMPLERATE], [samplerate],
-            [], [have_jack=no]
-        )
-    fi
-
-    if test "x$have_jack" = "xyes"; then
         OUTPUT_PLUGINS="$OUTPUT_PLUGINS jack"
     elif test "x$enable_jack" = "xyes"; then
-        AC_MSG_ERROR([Cannot find JACK (ver >= 0.120.1 but < 1.0 or >= 1.9.7) or libsamplerate development files, but compilation of JACK output plugin has been explicitly requested; please install JACK and libsamplerate dev files and run configure again])
+        AC_MSG_ERROR([Cannot find JACK (ver >= 0.120.1 but < 1.0 or >= 1.9.7) development files, but compilation of JACK output plugin has been explicitly requested; please install JACK dev files and run configure again])
     fi
 fi
 
