--- a/src/jack/Makefile
+++ b/src/jack/Makefile
@@ -10,5 +10,5 @@ plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS} ${JACK_LIBS} -lm
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
+LIBS += ${JACK_LIBS} -lm
