Scrap the old JACK plugin and write a new one.

--- a/src/jack-ng/Makefile
+++ b/src/jack-ng/Makefile
@@ -1,7 +1,6 @@
-PLUGIN = jackout${PLUGIN_SUFFIX}
+PLUGIN = jack-ng${PLUGIN_SUFFIX}
 
-SRCS = jack.cc		\
-       bio2jack.cc
+SRCS = jack-ng.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
@@ -11,4 +10,4 @@ plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
-LIBS += ${JACK_LIBS} -lm
+LIBS += ${JACK_LIBS}
