alarm: Nominal conversion to PluginPreferences.

--- a/src/alarm/Makefile
+++ b/src/alarm/Makefile
@@ -12,4 +12,4 @@ LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS}
+LIBS += ${GTK_LIBS} ${GLIB_LIBS} -laudgui
