qtaudio: Use new-style plugin declaration.  Some fixes.

--- a/src/qtaudio/Makefile
+++ b/src/qtaudio/Makefile
@@ -1,7 +1,6 @@
 PLUGIN = qtaudio${PLUGIN_SUFFIX}
 
-SRCS = qtaudio.cc \
-       plugin.cc \
+SRCS = qtaudio.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
