qtui: add hidpi toolbar icons

--- a/src/qtui/Makefile
+++ b/src/qtui/Makefile
@@ -61,6 +61,21 @@ DATA = QtUi/16/audio-volume-high.png \
        QtUi/22/media-playlist-shuffle.png \
        QtUi/22/media-skip-backward.png \
        QtUi/22/media-skip-forward.png \
+       QtUi/44/audio-volume-high.png \
+       QtUi/44/audio-volume-low.png \
+       QtUi/44/audio-volume-medium.png \
+       QtUi/44/audio-volume-muted.png \
+       QtUi/44/audio-volume-off.png \
+       QtUi/44/document-open.png \
+       QtUi/44/edit-find.png \
+       QtUi/44/list-add.png \
+       QtUi/44/media-playback-pause.png \
+       QtUi/44/media-playback-start.png \
+       QtUi/44/media-playback-stop.png \
+       QtUi/44/media-playlist-repeat.png \
+       QtUi/44/media-playlist-shuffle.png \
+       QtUi/44/media-skip-backward.png \
+       QtUi/44/media-skip-forward.png \
        QtUi/AUTHORS \
        QtUi/index.theme
 endif
