--- a/src/flacng/Makefile
+++ b/src/flacng/Makefile
@@ -13,5 +13,5 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${LIBFLAC_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS} ${LIBFLAC_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${LIBFLAC_CFLAGS} -I../..
+LIBS += ${LIBFLAC_LIBS}
