Eliminate some GLib dependencies.

--- a/src/console/Makefile
+++ b/src/console/Makefile
@@ -62,5 +62,5 @@ LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
 CXXFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../..
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
 LIBS += -lz
