--- a/src/coreaudio/Makefile
+++ b/src/coreaudio/Makefile
@@ -8,6 +8,6 @@ include ../../extra.mk
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 LD = ${CXX}
-CPPFLAGS += -I../.. ${SDL_CFLAGS}
-CXXFLAGS += ${GLIB_CFLAGS} ${PLUGIN_CFLAGS}
-LIBS += -lm ${GLIB_LIBS} ${SDL_LIBS} -framework CoreAudio
+CPPFLAGS += -I../..
+CXXFLAGS += ${PLUGIN_CFLAGS}
+LIBS += -lm -framework CoreAudio
