--- a/src/ffaudio/Makefile
+++ b/src/ffaudio/Makefile
@@ -10,5 +10,5 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${FFMPEG_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS} ${FFMPEG_LIBS} -laudtag
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${FFMPEG_CFLAGS} -I../..
+LIBS += ${FFMPEG_LIBS} -laudtag
