--- a/src/tonegen/Makefile
+++ b/src/tonegen/Makefile
@@ -10,5 +10,5 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS}  -I../..
-LIBS += ${GLIB_LIBS} -lm
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
+LIBS += -lm
