--- a/src/xsf/Makefile
+++ b/src/xsf/Makefile
@@ -14,5 +14,5 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 LD = ${CXX}
 
 CXXFLAGS += ${PLUGIN_CFLAGS} -Wno-sign-compare
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../.. -Ispu/
-LIBS += -lm -lz ${GLIB_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../.. -Ispu/
+LIBS += -lm -lz
