--- a/src/psf/Makefile
+++ b/src/psf/Makefile
@@ -20,5 +20,5 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 LD = ${CXX}
 
 CXXFLAGS += ${PLUGIN_CFLAGS} -Wno-narrowing -Wno-sign-compare
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} -I../.. -Ispu/ -I.
-LIBS += -lz ${GLIB_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../.. -Ispu/ -I.
+LIBS += -lz
