--- a/src/sndfile/Makefile
+++ b/src/sndfile/Makefile
@@ -11,5 +11,5 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${SNDFILE_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS} ${SNDFILE_LIBS} -lm
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${SNDFILE_CFLAGS} -I../..
+LIBS += ${SNDFILE_LIBS} -lm
