--- a/src/wavpack/Makefile
+++ b/src/wavpack/Makefile
@@ -10,5 +10,5 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${WAVPACK_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS} ${WAVPACK_LIBS} -laudtag
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${WAVPACK_CFLAGS} -I../..
+LIBS += ${WAVPACK_LIBS} -laudtag
