Update translations from Transifex.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,129 +1,180 @@
 # Please don't update this file manually - use ./update-potfiles.sh instead!
-src/aac/libmp4.c
-src/aac-raw/aac.c
+src/aac-raw/aac.cc
 src/adplug/adplug-xmms.cc
-src/adplug/plugin.c
-src/alarm/alarm.c
-src/alarm/interface.c
-src/albumart/albumart.c
-src/alsa/config.c
-src/alsa/plugin.c
-src/amidi-plug/amidi-plug.c
-src/amidi-plug/i_configure.c
-src/amidi-plug/i_configure-fluidsynth.c
-src/amidi-plug/i_fileinfo.c
-src/amidi-plug/i_utils.c
-src/aosd/aosd.c
-src/aosd/aosd_style.c
-src/aosd/aosd_trigger.c
-src/aosd/aosd_ui.c
-src/asx3/asx3.c
-src/asx/asx.c
-src/audpl/audpl.c
-src/blur_scope/blur_scope.c
-src/bs2b/plugin.c
-src/cairo-spectrum/cairo-spectrum.c
-src/cdaudio-ng/cdaudio-ng.c
-src/cd-menu-items/cd-menu-items.c
-src/compressor/plugin.c
-src/console/Ay_Apu.cxx
-src/console/Ay_Emu.cxx
-src/console/Blip_Buffer.cxx
-src/console/Classic_Emu.cxx
-src/console/Data_Reader.cxx
-src/console/Dual_Resampler.cxx
-src/console/Fir_Resampler.cxx
-src/console/Gbs_Emu.cxx
-src/console/Gme_File.cxx
-src/console/Gym_Emu.cxx
-src/console/Gzip_Reader.cxx
-src/console/Hes_Emu.cxx
-src/console/Kss_Emu.cxx
-src/console/M3u_Playlist.cxx
-src/console/Multi_Buffer.cxx
-src/console/Music_Emu.cxx
-src/console/Nes_Apu.cxx
-src/console/Nsfe_Emu.cxx
-src/console/Nsf_Emu.cxx
-src/console/plugin.c
-src/console/Sap_Emu.cxx
-src/console/Spc_Cpu.cxx
-src/console/Spc_Dsp.cxx
-src/console/Spc_Emu.cxx
-src/console/Vgm_Emu.cxx
-src/console/Ym2612_Emu.cxx
-src/crossfade/crossfade.c
-src/crystalizer/crystalizer.c
-src/cue/cue.c
-src/delete-files/delete-files.c
-src/echo_plugin/echo.c
-src/ffaudio/ffaudio-core.c
-src/filewriter/filewriter.c
-src/filewriter/mp3.c
-src/filewriter/vorbis.c
-src/flacng/metadata.c
-src/flacng/plugin.c
-src/gio/gio.c
-src/gl-spectrum/gl-spectrum.c
-src/gnomeshortcuts/gnomeshortcuts.c
-src/gtkui/columns.c
-src/gtkui/layout.c
-src/gtkui/menus.c
-src/gtkui/settings.c
-src/gtkui/ui_gtk.c
-src/gtkui/ui_playlist_widget.c
-src/gtkui/ui_statusbar.c
-src/hotkey/gui.c
-src/hotkey/plugin.c
-src/jack/bio2jack.c
-src/jack/jack.c
-src/ladspa/plugin.c
-src/lirc/lirc.c
-src/lyricwiki/lyricwiki.c
-src/m3u/m3u.c
-src/metronom/metronom.c
-src/mixer/mixer.c
-src/mms/mms.c
-src/modplug/modplugbmp.cxx
-src/modplug/plugin_main.c
-src/mpg123/mpg123.c
-src/mpris2/plugin.c
-src/neon/neon.c
-src/notify/event.c
-src/notify/notify.c
-src/notify/osd.c
-src/oss4/plugin.c
-src/pls/pls.c
-src/psf/plugin.c
-src/pulse_audio/pulse_audio.c
-src/resample/resample.c
-src/scrobbler2/config_window.c
-src/scrobbler2/scrobbler.c
-src/scrobbler2/scrobbler_communication.c
-src/sdlout/plugin.c
-src/search-tool/search-tool.c
-src/skins/menus.c
-src/skins/plugin.c
-src/skins/preset-browser.c
-src/skins/preset-list.c
-src/skins/skins_cfg.c
-src/skins/ui_equalizer.c
-src/skins/ui_main.c
-src/skins/ui_main_evlisteners.c
-src/skins/ui_playlist.c
-src/skins/ui_skinselector.c
-src/skins/util.c
-src/sndfile/plugin.c
-src/sndio/sndio.c
-src/song_change/song_change.c
-src/sox-resampler/sox-resampler.c
-src/speed-pitch/speed-pitch.c
-src/statusicon/statusicon.c
-src/stereo_plugin/stereo.c
-src/tonegen/tonegen.c
-src/voice_removal/voice_removal.c
-src/vorbis/vorbis.c
-src/vtx/vtx.c
-src/wavpack/wavpack.c
-src/xsf/plugin.c
-src/xspf/xspf.c
+src/adplug/core/rix.h
+src/alarm/alarm.cc
+src/alarm/interface.cc
+src/albumart/albumart.cc
+src/albumart-qt/albumart.cc
+src/alsa/alsa.h
+src/alsa/config.cc
+src/amidi-plug/amidi-plug.cc
+src/amidi-plug/i_configure.cc
+src/amidi-plug/i_configure-fluidsynth.cc
+src/amidi-plug/i_fileinfo.cc
+src/aosd/aosd.cc
+src/aosd/aosd.h
+src/aosd/aosd_style.cc
+src/aosd/aosd_trigger.cc
+src/aosd/aosd_ui.cc
+src/asx3/asx3.cc
+src/asx/asx.cc
+src/audpl/audpl.cc
+src/blur_scope/blur_scope.cc
+src/bs2b/plugin.cc
+src/cairo-spectrum/cairo-spectrum.cc
+src/cdaudio-ng/cdaudio-ng.cc
+src/cd-menu-items/cd-menu-items.cc
+src/compressor/compressor.cc
+src/console/Ay_Apu.cc
+src/console/Ay_Apu.h
+src/console/Ay_Emu.cc
+src/console/Ay_Emu.h
+src/console/blargg_common.h
+src/console/blargg_source.h
+src/console/Blip_Buffer.cc
+src/console/Blip_Buffer.h
+src/console/Classic_Emu.cc
+src/console/Classic_Emu.h
+src/console/Data_Reader.cc
+src/console/Dual_Resampler.cc
+src/console/Dual_Resampler.h
+src/console/Fir_Resampler.cc
+src/console/Fir_Resampler.h
+src/console/gb_cpu_io.h
+src/console/Gbs_Emu.cc
+src/console/Gbs_Emu.h
+src/console/Gme_File.cc
+src/console/Gme_File.h
+src/console/Gym_Emu.cc
+src/console/Gym_Emu.h
+src/console/Gzip_Reader.cc
+src/console/Gzip_Reader.h
+src/console/hes_cpu_io.h
+src/console/Hes_Emu.cc
+src/console/Hes_Emu.h
+src/console/Kss_Emu.cc
+src/console/Kss_Emu.h
+src/console/M3u_Playlist.cc
+src/console/M3u_Playlist.h
+src/console/Multi_Buffer.cc
+src/console/Music_Emu.cc
+src/console/Music_Emu.h
+src/console/Nes_Apu.cc
+src/console/Nes_Apu.h
+src/console/Nsfe_Emu.cc
+src/console/Nsfe_Emu.h
+src/console/Nsf_Emu.cc
+src/console/Nsf_Emu.h
+src/console/plugin.cc
+src/console/plugin.h
+src/console/sap_cpu_io.h
+src/console/Sap_Emu.cc
+src/console/Sap_Emu.h
+src/console/Snes_Spc.h
+src/console/Spc_Cpu.cc
+src/console/Spc_Cpu.h
+src/console/Spc_Dsp.cc
+src/console/Spc_Emu.cc
+src/console/Spc_Emu.h
+src/console/Vgm_Emu.cc
+src/console/Vgm_Emu.h
+src/console/Ym2612_Emu.cc
+src/coreaudio/coreaudio.cc
+src/crossfade/crossfade.cc
+src/crystalizer/crystalizer.cc
+src/cue/cue.cc
+src/delete-files/delete-files.cc
+src/echo_plugin/echo.cc
+src/ffaudio/ffaudio-core.cc
+src/filewriter/filewriter.cc
+src/filewriter/mp3.cc
+src/filewriter/vorbis.cc
+src/flacng/flacng.h
+src/flacng/metadata.cc
+src/flacng/plugin.cc
+src/gio/gio.cc
+src/gl-spectrum/gl-spectrum.cc
+src/gl-spectrum-qt/gl-spectrum.cc
+src/gnomeshortcuts/gnomeshortcuts.cc
+src/gtkui/columns.cc
+src/gtkui/layout.cc
+src/gtkui/menus.cc
+src/gtkui/settings.cc
+src/gtkui/ui_gtk.cc
+src/gtkui/ui_playlist_widget.cc
+src/gtkui/ui_statusbar.cc
+src/hotkey/gui.cc
+src/hotkey/plugin.cc
+src/jack-ng/jack-ng.cc
+src/ladspa/plugin.cc
+src/ladspa/plugin.h
+src/lirc/lirc.cc
+src/lyricwiki/lyricwiki.cc
+src/lyricwiki-qt/lyricwiki.cc
+src/m3u/m3u.cc
+src/metronom/metronom.cc
+src/mixer/mixer.cc
+src/mms/mms.cc
+src/modplug/modplugbmp.cc
+src/modplug/modplugbmp.h
+src/modplug/plugin_main.cc
+src/mpg123/mpg123.cc
+src/mpris2/plugin.cc
+src/neon/neon.cc
+src/notify/event.cc
+src/notify/notify.cc
+src/notify/osd.cc
+src/oss4/oss.h
+src/oss4/plugin.cc
+src/playlist-manager/playlist-manager.cc
+src/pls/pls.cc
+src/psf/plugin.cc
+src/psf/psx.h
+src/pulse_audio/pulse_audio.cc
+src/qtaudio/qtaudio.cc
+src/qtui/dialog_windows.cc
+src/qtui/filter_input.cc
+src/qtui/main_window_actions.cc
+src/qtui/main_window.cc
+src/qtui/playlist_model.cc
+src/qtui/qtui.cc
+src/qtui/status_bar.cc
+src/resample/resample.cc
+src/scrobbler2/config_window.cc
+src/scrobbler2/scrobbler.cc
+src/scrobbler2/scrobbler_communication.cc
+src/sdlout/sdlout.cc
+src/search-tool/search-tool.cc
+src/sid/xmms-sid.cc
+src/sid/xs_config.cc
+src/silence-removal/silence-removal.cc
+src/skins/menus.cc
+src/skins/plugin.cc
+src/skins/preset-browser.cc
+src/skins/preset-list.cc
+src/skins/skins_cfg.cc
+src/skins/ui_equalizer.cc
+src/skins/ui_main.cc
+src/skins/ui_main_evlisteners.cc
+src/skins/ui_playlist.cc
+src/skins/ui_skinselector.cc
+src/skins/util.cc
+src/sndfile/plugin.cc
+src/sndio-ng/sndio.cc
+src/song_change/song_change.cc
+src/song-info-qt/song-info.cc
+src/sox-resampler/sox-resampler.cc
+src/speed-pitch/speed-pitch.cc
+src/statusicon/statusicon.cc
+src/stereo_plugin/stereo.cc
+src/tonegen/tonegen.cc
+src/voice_removal/voice_removal.cc
+src/vorbis/vorbis.cc
+src/vorbis/vorbis.h
+src/vtx/info.cc
+src/vtx/vtx.cc
+src/wavpack/wavpack.cc
+src/xsf/desmume/types.h
+src/xsf/plugin.cc
+src/xspf/xspf.cc
