statusicon: More cleanup, coding style fixes.

--- a/src/statusicon/Makefile
+++ b/src/statusicon/Makefile
@@ -1,7 +1,6 @@
 PLUGIN = statusicon${PLUGIN_SUFFIX}
 
-SRCS = statusicon.cc \
-       util.cc
+SRCS = statusicon.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
@@ -10,5 +9,5 @@ plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS}  -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS} -laudgui
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} -I../..
+LIBS += ${GTK_LIBS} -laudgui
