jack-ng: Add JACK_CFLAGS to Makefile

--- a/src/jack-ng/Makefile
+++ b/src/jack-ng/Makefile
@@ -9,5 +9,5 @@ plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${JACK_CFLAGS} -I../..
 LIBS += ${JACK_LIBS}
