--- a/src/skins/Makefile
+++ b/src/skins/Makefile
@@ -1,6 +1,7 @@
 PLUGIN = skins${PLUGIN_SUFFIX}
 
 SRCS = drag-handle.cc \
+       drawing.cc \
        menus.cc \
        plugin.cc \
        plugin-window.cc \
