skins: Add a base Widget class.

--- a/src/skins/Makefile
+++ b/src/skins/Makefile
@@ -30,7 +30,8 @@ SRCS = drag-handle.cc \
        ui_playlist.cc \
        ui_main_evlisteners.cc \
        ui_skinselector.cc \
-       view.cc
+       view.cc \
+       widget.cc
 
 include ../../buildsys.mk
 include ../../extra.mk
