Fix build errors with --disable-gtk.

--- a/src/amidi-plug/Makefile
+++ b/src/amidi-plug/Makefile
@@ -15,5 +15,10 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${FLUIDSYNTH_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${FLUIDSYNTH_LIBS} -lm
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${FLUIDSYNTH_CFLAGS} -I../..
+LIBS += ${FLUIDSYNTH_LIBS} -lm
+
+ifeq ($(USE_GTK),yes)
+CPPFLAGS += ${GTK_CFLAGS}
+LIBS += ${GTK_LIBS}
+endif
