playlist-manager-qt: Add New, Rename, and Remove buttons.

--- a/src/playlist-manager-qt/Makefile
+++ b/src/playlist-manager-qt/Makefile
@@ -10,4 +10,4 @@ plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 LD = ${CXX}
 CPPFLAGS += -I../.. ${QT_CFLAGS}
 CFLAGS += ${PLUGIN_CFLAGS}
-LIBS += ${QT_LIBS}
+LIBS += ${QT_LIBS} -laudqt
